--- a/css/style.css
+++ b/css/style.css
@@ -152,8 +152,6 @@ body {
     border: 1px solid #8c7b7b;
     margin: 0 9px 7px 1px;
     display: flex;
-    /* cursor: url("../img/curcolorpicker.png"), auto; */
-    /* cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto; */
 }
 
 .spcolor input[type=radio] {
@@ -161,8 +159,6 @@ body {
     width: 23px;
     height: 23px;
     margin-left: 2px;
-    /* cursor: url("../img/curcolorpicker.png"), auto; */
-    /* cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto; */
 }
 
 .spcolor input[type=radio]:hover {
@@ -524,6 +520,8 @@ input:checked~.darkmodeslider::before {
     height: 46px;
     align-items: center;
     padding-left: 16px;
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
 }
 
 .navdiv:hover {
@@ -1351,10 +1349,25 @@ input:checked~.darkmodeslider::before {
     margin-top: 52px;
     box-shadow: 0px 3px 5px 1px #aab4be;
 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.experdefine{
+    height: 30px;
+    padding-left: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    
 }
 
 .expercardheadbody {
     padding: 7px;
+    padding-top: 0;
     background: white;
 }
 
@@ -1368,7 +1381,7 @@ input:checked~.darkmodeslider::before {
     align-items: center;
     justify-content: space-between;
     font-weight: 600;
-    margin-bottom: 11px;
+    margin-bottom: 5px;
 }
 
 .expercardlogo img {
@@ -1414,7 +1427,7 @@ input:checked~.darkmodeslider::before {
 
 .expercardfooter {
     background-color: #e2e2e2;
-    height: 65px;
+    /* height: 65px; */
     display: flex;
     align-items: center;
 }
@@ -1422,6 +1435,7 @@ input:checked~.darkmodeslider::before {
 .expercardfooter p {
     margin-left: 7px;
     padding: 16px;
+    font-weight: bold;
 }
 
 /* Awards */
