--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,31 @@
 body {
   scroll-behavior: smooth;
 }
-
+  #popup {
+    position: fixed;
+    top: 40%;
+    right: 8%;
+    /* width: 100%; height: 100%; */
+    /* background: rgba(0,0,0,0.7); */
+    display: flex;
+    align-items: center;
+    justify-content:flex-end;
+    color: white;
+    font-size: 2rem;
+    font-family: sans-serif;
+    z-index: 1000;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  #popup div {
+    /* background: black; */
+    border-radius: 19px;
+    padding: 18px;
+  }
+  #popup.hide {
+    opacity: 0;
+    pointer-events: none;
+  }
 ::selection {
   color: white;
   background: black;
@@ -1084,7 +1108,7 @@ input:checked ~ .darkmodeslider::before {
 .prs,
 .prshid {
   width: 30%;
-  height: 360px;
+  /* height: 360px; */
   margin-left: 20px;
   margin-top: 60px;
   box-shadow: 0px 3px 5px 1px #aab4be;
@@ -1117,7 +1141,7 @@ input:checked ~ .darkmodeslider::before {
 .prtitle {
   display: flex;
   flex-direction: row;
-  height: 42px;
+  /* height: 42px; */
   justify-content: space-between;
   align-items: center;
   padding-left: 10px;
