Added Video Summarizer project

--- a/css/style.css
+++ b/css/style.css
@@ -799,6 +799,7 @@ html.dark .edu-year {
     display: grid;
     grid-template-columns: 1fr;
     gap: 3rem;
+    align-items: center;
 }
 
 .contact-info-list {
